doc: fix link; make cells in table align at top
"Query Parameters Examples" table aligned the labels in column 1 in
the middle of the text in column 2. Change that to align cells
at the top of the row.

Also fix a bad link.

--- a/website/www/_static/style.css
+++ b/website/www/_static/style.css
@@ -565,3 +565,4 @@ div#contact table td {
   padding: 1pt 1em;
 }
 
+table.valign-top tbody td { vertical-align: top; }
